[package]
name = "codeprobs_cli"
authors = ["PixelSam123"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
comfy-table = "6.0"
